Resolve bugs/ Fix app crash on all pages

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ VITE_APPWRITE_STORAGE_ID=6659407b0026ca5a1605
 VITE_APPWRITE_USER_COLLECTION_ID=66594172003e62cb7449
 VITE_APPWRITE_POST_COLLECTION_ID=665941360020e0b58682
 VITE_APPWRITE_SAVES_COLLECTION_ID=66594197003e0314b794
+VITE_APPWRITE_LIST_COLLECTION_ID=665e1897003b6afc36e6
+
