--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.35.7",
     "appwrite": "^14.0.1",
     "attr-accept": "^2.2.2",
+    "axios": "^1.7.2",
+    "build": "^0.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -33,6 +36,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-intersection-observer": "^9.5.2",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
     "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^1.14.0",
