--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ VITE_APPWRITE_AI_SUGGESTIONS_FUNCTION_ID=667e2b1f001d6a246c59
 VITE_APPWRITE_GENERATE_LIST_IDEA_FUNCTION_ID=667f7b2100386da9fe81
 VITE_APPWRITE_ANALYZE_SENTIMENT_FUNCTION_ID=667f7cfa002b86d82fe4
 VITE_APPWRITE_ENHANCE_DESCRIPTION_FUNCTION_ID=667f7d5300286336332a
+VITE_APPWRITE_TYPESENSE_OPERATIONS_FUNCTION_ID=668200a4001a8d9913c7
