--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "snapgram",
+  "name": "topfived",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,7 +20,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.35.7",
-    "appwrite": "^14.0.1",
+    "appwrite": "^15.0.0",
     "attr-accept": "^2.2.2",
     "axios": "^1.7.2",
     "build": "^0.1.4",
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "js-yaml": "^4.1.0",
     "lucide-react": "^0.279.0",
     "openai": "^4.52.1",
     "prettier": "^3.0.3",
@@ -42,6 +43,7 @@
     "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "uglify-js": "^3.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -59,5 +61,6 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+    
   }
 }
