--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "openai": "^4.52.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
@@ -61,6 +62,5 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
-    
   }
 }
