--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ VITE_APPWRITE_GENERATE_LIST_IDEA_FUNCTION_ID=667f7b2100386da9fe81
 VITE_APPWRITE_ANALYZE_SENTIMENT_FUNCTION_ID=667f7cfa002b86d82fe4
 VITE_APPWRITE_ENHANCE_DESCRIPTION_FUNCTION_ID=667f7d5300286336332a
 VITE_APPWRITE_TYPESENSE_OPERATIONS_FUNCTION_ID=668200a4001a8d9913c7
+VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=668d63b10039de88642c
