--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ VITE_APPWRITE_SUGGESTION_COLLECTION_ID=666320fa0012ee017103
 VITE_APPWRITE_COLLABORATION_COLLECTION_ID=6663209c001765bf9422
 VITE_APPWRITE_CATEGORY_COLLECTION_ID=66743edc000f3b8343e1
 VITE_APPWRITE_SHARED_LINKS_COLLECTION_ID=667f1c410030b58b680c
-VITE_APPWRITE_FRIENDS_COLLECTION_ID=friends_collection
+VITE_APPWRITE_FRIENDS_COLLECTION_ID=669d6d7a0017b7323cd6
 VITE_APPWRITE_AI_SUGGESTIONS_FUNCTION_ID=667e2b1f001d6a246c59
 VITE_APPWRITE_GENERATE_LIST_IDEA_FUNCTION_ID=667f7b2100386da9fe81
 VITE_APPWRITE_GENERATE_LIST_ITEMS_FUNCTION_ID=669c0c86002920109929
@@ -18,4 +18,5 @@ VITE_APPWRITE_ANALYZE_SENTIMENT_FUNCTION_ID=667f7cfa002b86d82fe4
 VITE_APPWRITE_ENHANCE_DESCRIPTION_FUNCTION_ID=667f7d5300286336332a
 VITE_APPWRITE_TYPESENSE_OPERATIONS_FUNCTION_ID=668200a4001a8d9913c7
 VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=668d63b10039de88642c
+VITE_APP_DOMAIN = http://localhost:3000
 
