--- a/.env
+++ b/.env
@@ -19,4 +19,5 @@ VITE_APPWRITE_ENHANCE_DESCRIPTION_FUNCTION_ID=667f7d5300286336332a
 VITE_APPWRITE_TYPESENSE_OPERATIONS_FUNCTION_ID=668200a4001a8d9913c7
 VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=668d63b10039de88642c
 VITE_APP_DOMAIN = http://localhost:3000
+VITE_EMBED_LIST_COLLECTION_ID = 66a7ecc8002ecdecbf64
 
