Updated Tp Embed

--- a/.env
+++ b/.env
@@ -19,5 +19,6 @@ VITE_APPWRITE_ENHANCE_DESCRIPTION_FUNCTION_ID=667f7d5300286336332a
 VITE_APPWRITE_TYPESENSE_OPERATIONS_FUNCTION_ID=668200a4001a8d9913c7
 VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=668d63b10039de88642c
 VITE_APP_DOMAIN = http://localhost:3000
-VITE_EMBED_LIST_COLLECTION_ID = 66a7ecc8002ecdecbf64
+VITE_EMBED_LIST_COLLECTION_ID = 66ae26ba001d178890ee
+ITEM_COLLECTION_ID = 66ab99e100295497dab9
 
