--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_APPWRITE_URL=https://cloud.appwrite.io/v1
+VITE_APP_URL=http://localhost:3000
 VITE_APPWRITE_PROJECT_ID=665933da001c399a94a8
 VITE_APPWRITE_DATABASE_ID=665940f4002f7b5e0832
 VITE_APPWRITE_STORAGE_ID=6659407b0026ca5a1605
@@ -21,4 +22,5 @@ VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=668d63b10039de88642c
 VITE_APP_DOMAIN = http://localhost:3000
 VITE_EMBED_LIST_COLLECTION_ID = 66ae26ba001d178890ee
 ITEM_COLLECTION_ID = 66ab99e100295497dab9
+VITE_UNSPLASH_ACCESS_KEY=29_t8mVtkEe-QWLMrwAKp1I8rBMu2EjiaoHJCnm-LgQ
 
