--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
