--- a/.env.development
+++ b/.env.development
@@ -19,8 +19,8 @@ VITE_APPWRITE_ANALYZE_SENTIMENT_FUNCTION_ID=667f7cfa002b86d82fe4
 VITE_APPWRITE_ENHANCE_DESCRIPTION_FUNCTION_ID=667f7d5300286336332a
 VITE_APPWRITE_TYPESENSE_OPERATIONS_FUNCTION_ID=668200a4001a8d9913c7
 VITE_APPWRITE_NOTIFICATIONS_COLLECTION_ID=668d63b10039de88642c
-VITE_APP_DOMAIN = https://topfived2.vercel.app
-VITE_EMBED_LIST_COLLECTION_ID = 66ae26ba001d178890ee
-ITEM_COLLECTION_ID = 66ab99e100295497dab9
+VITE_APP_DOMAIN=http://localhost:3000
+VITE_EMBED_LIST_COLLECTION_ID=66ae26ba001d178890ee
+ITEM_COLLECTION_ID=66ab99e100295497dab9
 VITE_UNSPLASH_ACCESS_KEY=29_t8mVtkEe-QWLMrwAKp1I8rBMu2EjiaoHJCnm-LgQ
 VITE_APPWRITE_GOOGLE_COLLECTION_ID=66e94ad60027207a2879
