--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.16.0",
+    "react-share": "^5.1.0",
     "solidjs-dropzone": "^1.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
