--- a/.env.production
+++ b/.env.production
@@ -24,3 +24,4 @@ VITE_EMBED_LIST_COLLECTION_ID = 66ae26ba001d178890ee
 ITEM_COLLECTION_ID = 66ab99e100295497dab9
 VITE_UNSPLASH_ACCESS_KEY=29_t8mVtkEe-QWLMrwAKp1I8rBMu2EjiaoHJCnm-LgQ
 VITE_APPWRITE_GOOGLE_COLLECTION_ID=66e94ad60027207a2879
+VITE_APPWRITE_CONTACTMESSAGES_COLLECTION=6710eb09001a3858a460
