--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "framer-motion": "^11.2.13",
+    "js-cookie": "^3.0.5",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.445.0",
     "openai": "^4.52.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
