--- a/.env.development
+++ b/.env.development
@@ -28,3 +28,4 @@ VITE_APPWRITE_CONTACTMESSAGES_COLLECTION=6710eb09001a3858a460
 VITE_APPWRITE_COMMENT_REPLY_COLLECTION_ID=66b22bc7003828cf45ab
 VITE_APPWRITE_REPORTED_COMMENTS_COLLECTION_ID=66dc4454001a27643f2d
 VITE_APPWRITE_CONNECTIONS_COLLECTION_ID=66b66f4e00254daf8870
+VITE_APPWRITE_REPORTED_LISTS_COLLECTION_ID=6710ff2b000b2ae127fc
