--- a/.env.development
+++ b/.env.development
@@ -29,3 +29,10 @@ VITE_APPWRITE_COMMENT_REPLY_COLLECTION_ID=66b22bc7003828cf45ab
 VITE_APPWRITE_REPORTED_COMMENTS_COLLECTION_ID=66dc4454001a27643f2d
 VITE_APPWRITE_CONNECTIONS_COLLECTION_ID=66b66f4e00254daf8870
 VITE_APPWRITE_REPORTED_LISTS_COLLECTION_ID=6710ff2b000b2ae127fc
+VITE_APPWRITE_ENGAGEMENT_COLLECTION_ID=671cf2a4002f502b46c2
+VITE_APPWRITE_DEBATE_ACTIVITY_COLLECTION_ID=671cf290000ab05a25b5
+VITE_APPWRITE_ACHIEVEMENTS_COLLECTION_ID=671cf2730012ce3f99d9
+VITE_APPWRITE_USER_STATS_COLLECTION_ID=671cf25c002ea01f8101
+VITE_APPWRITE_RANKING_HISTORY_COLLECTION_ID=671cf219003b03929f03
+VITE_APPWRITE_GENERAL_ENGAGEMENT_COLLECTION_ID=6720dcca0037c0c47a08
+VITE_APPWRITE_LIST_ENGAGEMENT_COLLECTION_ID=6720ddbc00375f4b0719
